--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-### Ulisses Curvello Ferreira
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<!-- Estilos CSS aplicados para dar vida ao site -->
+<style>
+    /* Estilo básico para a página */
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        color: #333;
+        margin: 0;
+        padding: 0;
+    }
+
+    header {
+        background-color: #4CAF50;
+        color: white;
+        text-align: center;
+        padding: 20px;
+    }
+
+    .texto_principal {
+        text-align: center;
+        padding: 30px 20px;
+    }
+
+    footer {
+        background-color: #333;
+        color: white;
+        text-align: center;
+        padding: 10px 0;
+        position: fixed;
+        width: 100%;
+        bottom: 0;
+    }
+</style>
+
+    <!-- Cabeçalho da página, que contém metadados e informações sobre o documento -->
+    <head>
+        <meta charset="UTF-8"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <title>Site Simples</title>
+    </head>
+
+    <!-- Corpo da página -->
+    <body>
+        <header>
+            <h1>Bem-vindo ao Meu Site</h1>
+        </header>
+
+        <div class="texto_principal">
+            <h2>Um Design Simples</h2>
+            <p>Pequeno exemplo de site.</p>
+        </div>
+    </body>
+
+    <!-- Rodapé da página -->
+    <footer>
+        <p>&copy; 2024 Meu Site</p>
+    </footer>
+</html>
