--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <!-- Corpo da página -->
     <body>
         <header>
-            <h1>Bem-vindo ao Meu Site</h1>
+            <h1>Bem-vindo</h1>
         </header>
 
         <div class="texto_principal">
             <h2>Um Design Simples</h2>
-            <p>Pequeno exemplo de site.</p>
+            <p>Exemplo de site.</p>
         </div>
     </body>
 
