--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <!-- Estilos CSS aplicados para dar vida ao site -->
-<!--
+
     
 <style>
     /* Estilo básico para a página */
@@ -37,7 +37,7 @@
     }
 </style>
 
--->
+
 
     <!-- Cabeçalho da página, que contém metadados e informações sobre o documento -->
     <head>
@@ -53,13 +53,13 @@
         </header>
 
         <div class="texto_principal">
-            <h2>Um Design Simples</h2>
+            <h2>Um Texto Simples</h2>
             <p>Exemplo de site.</p>
         </div>
     </body>
 
     <!-- Rodapé da página -->
     <footer>
-        <p>&copy; 2024 Meu Site</p>
+        <p>2024</p>
     </footer>
 </html>
