--- a/pagina1.html
+++ b/pagina1.html
@@ -41,15 +41,17 @@
     <header>
         <h1>Página 1</h1>
     </header>
-        <p>Bem-vindo à Página 1! <br><br>lIVRO:<br><br>
-        O livro é um produto intelectual e, como tal, encerra conhecimento e expressões individuais ou coletivas. 
-        Mas também é nos dias de hoje um produto de consumo, um bem. Portanto, a parte final de sua produção é realizada por meios industriais 
-        (impressão e distribuição), envolvendo também o design de livros. A tarefa de criar um conteúdo passível de ser transformado em livro 
-        tarefa do autor. Já a produção dos livros, no que concerne a transformar os originais num produto comercializável, é tarefa do editor, 
-        em geral contratado por uma editora. A coleta, a organização e a indexação de coleções de livros, por outro lado, é típica do bibliotecário. 
-        Finalmente, destaca-se também o livreiro, cuja função principal é disponibilizar os livros editados ao público em geral, vendendo-os nas livrarias 
-        generalistas ou de especialidade. Compete também ao livreiro todo o trabalho de pesquisa que vá ao encontro da vontade dos leitores.
-        </p>
+        <div style="max-width: 900px; margin: 0 auto; text-align: center;">
+            <p>Bem-vindo à Página 1! <br><br>lIVRO:<br><br>
+            O livro é um produto intelectual e, como tal, encerra conhecimento e expressões individuais ou coletivas. 
+            Mas também é nos dias de hoje um produto de consumo, um bem. Portanto, a parte final de sua produção é realizada por meios industriais 
+            (impressão e distribuição), envolvendo também o design de livros. A tarefa de criar um conteúdo passível de ser transformado em livro 
+            tarefa do autor. Já a produção dos livros, no que concerne a transformar os originais num produto comercializável, é tarefa do editor, 
+            em geral contratado por uma editora. A coleta, a organização e a indexação de coleções de livros, por outro lado, é típica do bibliotecário. 
+            Finalmente, destaca-se também o livreiro, cuja função principal é disponibilizar os livros editados ao público em geral, vendendo-os nas livrarias 
+            generalistas ou de especialidade. Compete também ao livreiro todo o trabalho de pesquisa que vá ao encontro da vontade dos leitores.
+            </p>
+        </div>
     <div class="voltar">
         <a href="index.html">Voltar ao Início</a>
     </div>
