--- a/pagina2.html
+++ b/pagina2.html
@@ -41,12 +41,13 @@
     <header>
         <h1>Página 2</h1>
     </header>
-        <p>Bem-vindo à Página 2! <br><br> MÚSICA: <br><br> 
-            É considerada por diversos autores como uma prática cultural e humana. Não se conhece nenhuma civilização ou agrupamento
-             que não possua manifestações musicais próprias. Embora nem sempre seja feita com esse objetivo, a música pode ser
-             considerada como uma forma de arte, considerada por muitos como sua principal função.
-            
-        </p>
+        <div style="max-width: 900px; margin: 0 auto; text-align: center;">
+            <p>Bem-vindo à Página 2! <br><br> MÚSICA: <br><br> 
+                É considerada por diversos autores como uma prática cultural e humana. Não se conhece nenhuma civilização ou agrupamento
+                que não possua manifestações musicais próprias. Embora nem sempre seja feita com esse objetivo, a música pode ser
+                considerada como uma forma de arte, considerada por muitos como sua principal função.
+            </p>
+        </div>
     <div class="voltar">
         <a href="index.html">Voltar ao Início</a>
     </div>
