--- a/pagina3.html
+++ b/pagina3.html
@@ -41,11 +41,12 @@
     <header>
         <h1>Página 3</h1>
     </header>
-        <p>Bem-vindo à Página 3: <br><br> ARTE:<br> <br>
-            Arte é uma gama diversificada de atividades humanas e seu produto resultante que envolve talento criativo 
-            ou imaginativo, geralmente expresso em proficiência técnica, beleza, poder emocional ou ideias conceituais
-            
-        </p>
+        <div style="max-width: 900px; margin: 0 auto; text-align: center;"> 
+            <p>Bem-vindo à Página 3: <br><br> ARTE:<br> <br>
+                Arte é uma gama diversificada de atividades humanas e seu produto resultante que envolve talento criativo 
+                ou imaginativo, geralmente expresso em proficiência técnica, beleza, poder emocional ou ideias conceituais
+            </p>
+        </div>
     <div class="voltar">
         <a href="index.html">Voltar ao Início</a>
     </div>
